--- a/backend/salon-booking-app-admin/package.json
+++ b/backend/salon-booking-app-admin/package.json
@@ -7,15 +7,16 @@
     "develop": "strapi develop",
     "start": "strapi start",
     "build": "strapi build",
-    "strapi": "strapi"
+    "strapi": "strapi",
+    "deploy": "strapi deploy"
   },
-  "devDependencies": {},
   "dependencies": {
-    "@strapi/strapi": "4.24.5",
-    "@strapi/plugin-users-permissions": "4.24.5",
-    "@strapi/plugin-i18n": "4.24.5",
-    "@strapi/plugin-cloud": "4.24.5",
-    "mysql": "2.18.1",
+    "@strapi/plugin-cloud": "4.25.0",
+    "@strapi/plugin-i18n": "4.25.0",
+    "@strapi/plugin-users-permissions": "4.25.0",
+    "@strapi/provider-upload-cloudinary": "^4.25.0",
+    "@strapi/strapi": "^4.24.5",
+    "pg": "8.8.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "5.3.4",
@@ -25,7 +26,7 @@
     "name": "A Strapi developer"
   },
   "strapi": {
-    "uuid": "eea0cf52-a560-46e4-8ee6-fbeda5561f11"
+    "uuid": "cfceed2e-a619-44c4-810b-d94cc6c2518e"
   },
   "engines": {
     "node": ">=18.0.0 <=20.x.x",
